--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,7 @@ var a,b,c;
 a=Number(document.getElementById("first").value);
 b=Number(document.getElementById("second").value);
 c= a + b;
-document.getElementById("answer").value= c;
+alert(c);
 }
 </script>
 </head>
